# ical-tools

./: README.md
ical-syntax/: Cargo.toml
ical-syntax/src/: lib.rs
ical-syntax/src/generate/: composite_value_types.rs  content_line.rs  folding_writer.rs  line_stream.rs  mod.rs  text_writer.rs  validating_writers.rs  value_types.rs  writer.rs
ical-syntax/src/generate/icalstream/: components.rs  mod.rs  properties.rs  typed_writers.rs  value_types.rs
ical-syntax/src/structure/: composite_value_types.rs  mod.rs  value_types.rs
ical-syntax/src/structure/icalstream/: components.rs  mod.rs  parameter_value_items.rs  parameters.rs  properties.rs  value_types.rs
ical-syntax/src/structure/icalstream/properties/: alarm.rs  calendar.rs  change_management.rs  date_and_time.rs  descriptive.rs  misc.rs  mod.rs  recurrence.rs  relationship.rs  time_zone.rs
ical-syntax/src/write/: chrono04.rs  composite_value_types.rs  content_line.rs  folding_writer.rs  io_adapters.rs  jiff02.rs  line_stream.rs  mod.rs  parameter_value_items.rs  text_writer.rs  validating_writers.rs  value_types.rs  writer.rs
ical-syntax/src/write/icalstream/: mod.rs  typed_writers.rs
ical-syntax/src/write/value_types/: chrono04.rs  jiff02.rs  mod.rs  period_of_time.rs
