[package]
name = "ical-syntax"
version = "0.1.0"
edition = "2021"

[dependencies.chrono]
version = "0.4.38"
default-features = false
optional = true

[dependencies.jiff]
version = "0.2.14"
default-features = false
optional = true

[features]
default = ["chrono04"]
chrono04 = ["dep:chrono"]
jiff02 = ["dep:jiff"]
